<resources>
    <!--    Generali    -->
    <string name="app_name">OssigeNow</string>
    <string name="conferma">Conferma</string>
    <string name="annulla">Annulla</string>
    <string name="pulisci">Pulisci</string>
    <string name="ATTENZIONE">ATTENZIONE</string>

    <!--    MainActivity    -->
    <string name="titoloAccesso">Accesso</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="domandaRegistrati">Non sei ancora registrato?</string>
    <string name="nomeUtente">Nome Utente:</string>
    <string name="nomeUtenteHint">es: OrsoBruno02</string>
    <string name="password">Password:</string>
    <string name="passwordHint">es: Password123_</string>
    <string name="credentialError">Nome Utente e/o Password errati</string>

    <!--    RegistrazioneActivity    -->
    <string name="titoloRegister">Registrati</string>
    <string name="nome">Nome:</string>
    <string name="nomeHint">es: Ahmed</string>
    <string name="cognome">Cognome:</string>
    <string name="cognomeHint">es: Bensaid</string>
    <string name="data">Data di nascita:</string>
    <string name="dataHint">es: 01/01/2000</string>
    <string name="registerSuccess">Registrazione avvenuta con successo</string>
    <string name="registerError">Account già esistente</string>

    <!--    HomeActivity - Home    -->
    <string name="titoloGruppi">I tuoi gruppi:</string>
    <string name="no_gruppi">Non sei ancora iscritto a nessun gruppo</string>
    <string name="crea_gruppo">Crea Gruppo</string>

    <!--    HomeActivity - Inviti    -->
    <string name="titoloInviti">I tuoi inviti:</string>
    <string name="no_inviti">Non hai ricevuto nessun invito</string>

    <!--    HomeActivity - Booking    -->
    <string name="titoloPrenotazioni">Partite da prenotare:</string>
    <string name="no_prenotazioni">Non hai nessuna partita da prenotare</string>
    <string name="titoloPrenotazioni2">Partite prenotate:</string>
    <string name="no_prenotazioni2">Non hai nessuna partita prenotata</string>

    <!--    HomeActivity - profile    -->
    <string name="titoloProfilo">Profilo</string>
    <string name="logout">Disconnetti</string>


    <!--    NewGroupActivity    -->
    <string name="titoloNewEvent">Nuovo Gruppo</string>
    <string name="nomeGruppo">Nome gruppo</string>
    <string name="es_nome_gruppo">I black guys</string>
    <string name="frequenza_partite">Frequenza delle partite</string>
    <string name="numero_partecipanti">Numero partecipanti</string>
    <string name="creaGruppo">Crea gruppo</string>

    <string-array name="menu_tendina">
        <item>Settimanale</item>
        <item>Bi-settimanale</item>
        <item>Mensile</item>
        <item>Bimestrale</item>
        <item>Trimestrale</item>
    </string-array>

</resources>