<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/background"
    >

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_below="@id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="38sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <ImageButton
                android:id="@+id/indietro"
                android:contentDescription="indietro"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/back"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@id/toolbar"
        android:id="@+id/space2"
        />

    <ScrollView
        android:layout_below="@id/space2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            >

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titoloRegister"
                android:textColor="@color/black"
                android:textSize="36sp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeUtente"
                android:textColor="@color/black"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPersonName"
                android:textSize="28sp"
                android:textColorHint="@color/gray"
                android:id="@+id/nomeUtente"
                android:hint="@string/nomeUtenteHint"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_box_background"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textColor="@color/black"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPersonName"
                android:textSize="28sp"
                android:textColorHint="@color/gray"
                android:id="@+id/nome"
                android:hint="@string/nomeHint"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_box_background"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cognome"
                android:textColor="@color/black"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPersonName"
                android:textSize="28sp"
                android:textColorHint="@color/gray"
                android:id="@+id/cognome"
                android:hint="@string/cognomeHint"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_box_background"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="@color/black"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="date"
                android:textSize="28sp"
                android:textColorHint="@color/gray"
                android:id="@+id/data"
                android:hint="@string/dataHint"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_box_background"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:textSize="28sp"
                android:textColorHint="@color/gray"
                android:id="@+id/password"
                android:hint="@string/passwordHint"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_box_background"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:id="@+id/conferma"
                android:text="@string/registrati"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/pulisci"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:backgroundTint="@color/gray"
                android:text="@string/pulisci"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

