<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/background2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_logo"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        android:background="@drawable/background_main_2bordi"
        app:layout_constraintTop_toBottomOf="@id/logoLayout"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titoloAccesso"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeUtente"
                android:textColor="@color/black"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPersonName"
                android:textSize="23sp"
                android:textColorHint="@color/gray"
                android:id="@+id/nomeUtente"
                android:hint="@string/nomeUtenteHint"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_box_background"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="28sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:textSize="23sp"
                android:textColorHint="@color/gray"
                android:id="@+id/password"
                android:hint="@string/passwordHint"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_box_background"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

            <Button
                app:backgroundTint="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accedi"
                android:text="@string/accedi"
                android:textSize="28sp"
                android:paddingStart="42dp"
                android:paddingEnd="42dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_gravity="center"
                android:background="@drawable/std_button"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domandaRegistrati"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"
            />


        <Button
            app:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrati"
            android:textColor="@color/background"
            android:text="@string/registrati"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:background="@drawable/std_button_inverted"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/background2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_bottom_page"
            >
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>