<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:id="@+id/home">

    <TextView
        android:id="@+id/titoloGruppi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titoloGruppi"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <FrameLayout
        android:id="@+id/View_conteiner_gruppi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titoloGruppi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <!-- Contenitore gruppi -->
        <ScrollView
            android:id="@+id/scrollView_conteiner_gruppi"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/conteiner_gruppi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                >

                <TextView
                    android:id="@+id/no_gruppi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_gruppi"
                    />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_gravity="top"
            android:background="@drawable/shadow"
            android:rotation="180"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            android:background="@drawable/shadow"
            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/creaGruppo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@drawable/button_crea_gruppo"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@drawable/button_pressed_animation"
        app:layout_constraintTop_toBottomOf="@+id/View_conteiner_gruppi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crea_gruppo"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add_icon"
            android:layout_marginStart="18dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
